# lumastart

./: CMakeLists.txt  Makefile  README.md  flake.nix  meson.build
.github/workflows/: build-and-check.yml
nix/: default.nix
res/: lumastart.conf  resources.gresource.xml  style.css  ui.css
src/: app.cpp  app.h  applauncher.cpp  applauncher.h  list.cpp  log.h  main.cpp  ui.css  window.cpp  window.h
src/config/: config.cpp  config.h  css.cpp  lumastart.conf
subprojects/: gtk4-layer-shell.wrap
utils/: resource.cpp  resource.h
